# wcag

./: .env  .env.example  .env.example.v2  .pa11yci.json  ADVANCED_SCANNING_GUIDE.md  ALL_FIXES_SUMMARY.md  ALL_SCANNERS_INTEGRATION.md  AUTOMATIC_FETCH_SUCCESS.md  COMPLETE_SCANNING_GUIDE.md  DETAILED_VIOLATION_DISPLAY.md  ENHANCED_REPORTS_FEATURE.md  FIXES_APPLIED.md  ISSUE_VALIDATION_FIX.md  PERFORMANCE_OPTIMIZATION.md  QUEUE_FIX.md  QUICK_START.md  README_SOLUTIONS.md  REPORTS_UI_FIX.md  REPORT_AUTH_FIX.md  V2_DASHBOARD_TEST_REPORT.md  bootstrap_interactive.json  britishairways_all_scanners.json  britishairways_full_report.json  britishairways_report.html  cli_v2.py  example_report.json  full_report.html  main.py  pyproject.toml  requirements.txt  run_pa11y_scan.sh  scan_fetch_first.py  scan_offline_html.py  site_wide_report.json  test_interactive_scanner.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  (+9 more)
html_cache_0882cdf8-eb6b-4592-a248-d6489cea43a6/: index.html
html_cache_20260111_145307/: aggregate_report.json  index.html
html_cache_2baf0428-2f8a-4e44-abbb-e12244458ef3/: index.html
html_cache_39982343-f45c-458b-9b3b-85ae674a4f86/: index.html
html_cache_5816e97d-8d18-409b-9232-1fd3a31f512f/: index.html
scanner_v2/: README.md  config.yaml  requirements.txt
scanner_v2/api/: app.py  dependencies.py  middleware.py
scanner_v2/cli/: main.py  utils.py
scanner_v2/core/: compliance_scorer.py  crawler.py  issue_aggregator.py  page_scanner.py  scanner_orchestrator.py  wcag_reference.py
scanner_v2/database/: connection.py  models.py
scanner_v2/report_templates/: html_report.jinja2  styles.css
scanner_v2/schemas/: issue.py  project.py  scan.py  user.py
scanner_v2/services/: scanner_service.py  screenshot_service.py
scanner_v2/utils/: config.py  exceptions.py  fix_guides.py  helpers.py  logger.py
scanner_v2/workers/: queue_manager.py  scan_worker.py  worker_pool.py
src/: __init__.py  cli.py  main.py
src/api/: __init__.py  app.py  routes.py
src/core/: __init__.py  aggregator.py  crawler.py  html_fetcher.py  report_generator.py  site_scanner.py  wcag_mapper.py
src/models/: __init__.py  report.py  scan_result.py  violation.py
src/scanners/: __init__.py  aria_scanner.py  axe_scanner.py  base.py  contrast_checker.py  forms_scanner.py  html_validator.py  image_alt_scanner.py  media_scanner.py  (+8 more)
templates/: dashboard_v2.html  index.html  report.html
(+23 files in other folders)
